--- a/po/es.po
+++ b/po/es.po
@@ -11,9 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl.HEAD\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=gdl&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2013-04-13 20:20+0000\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gdl/issues\n"
+"POT-Creation-Date: 2022-08-31 11:46+0000\n"
 "PO-Revision-Date: 2013-04-18 09:42+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
@@ -24,9 +23,9 @@ msgstr ""
 "X-Generator: Gtranslator 2.91.5\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: ../gdl/deprecated/gdl-dock-tablabel.c:139 ../gdl/gdl-dock-item-grip.c:729
+#: ../gdl/deprecated/gdl-dock-tablabel.c:139 ../gdl/gdl-dock-item-grip.c:727
 msgid "Controlling dock item"
-msgstr "Elemento empotrable de control"
+msgstr "Elemento acoplable de control"
 
 #: ../gdl/deprecated/gdl-dock-tablabel.c:140
 msgid "Dockitem which 'owns' this tablabel"
@@ -39,16 +38,16 @@ msgstr "Dueño"
 #: ../gdl/gdl-dock-bar.c:128
 msgid "GdlDockMaster object which the dockbar widget is attached to"
 msgstr ""
-"Objeto GdlDockMaster al cual el widget de la barra de empotrado se encuentra "
+"Objeto GdlDockMaster al cual el widget de la barra de acoplado se encuentra "
 "adjunto"
 
 #: ../gdl/gdl-dock-bar.c:140
 msgid "Dockbar style"
-msgstr "Estilo de la barra de empotrado"
+msgstr "Estilo de la barra de acoplado"
 
 #: ../gdl/gdl-dock-bar.c:141
 msgid "Dockbar style to show items on it"
-msgstr "Estilo de la barra de empotrado para mostrar elementos en ella"
+msgstr "Estilo de la barra de acoplado para mostrar elementos en ella"
 
 #: ../gdl/gdl-dock.c:197
 msgid "Floating"
@@ -56,7 +55,7 @@ msgstr "Flotante"
 
 #: ../gdl/gdl-dock.c:198
 msgid "Whether the dock is floating in its own window"
-msgstr "Define si el empotrable es flotante en su propia ventana"
+msgstr "Define si el acoplable es flotante en su propia ventana"
 
 #: ../gdl/gdl-dock.c:205 ../gdl/gdl-dock-master.c:198
 msgid "Default title"
@@ -65,7 +64,7 @@ msgstr "Título predeterminado"
 #: ../gdl/gdl-dock.c:206
 msgid "Default title for the newly created floating docks"
 msgstr ""
-"Título predeterminado para los nuevos empotrables creados recientemente"
+"Título predeterminado para los nuevos acoplables creados recientemente"
 
 #: ../gdl/gdl-dock.c:212 ../gdl/gdl-dock-placeholder.c:192
 msgid "Width"
@@ -73,7 +72,7 @@ msgstr "Anchura"
 
 #: ../gdl/gdl-dock.c:213
 msgid "Width for the dock when it's of floating type"
-msgstr "Anchura para el empotrable cuando es del tipo flotante"
+msgstr "Anchura para el acoplable cuando es del tipo flotante"
 
 #: ../gdl/gdl-dock.c:220 ../gdl/gdl-dock-placeholder.c:200
 msgid "Height"
@@ -81,7 +80,7 @@ msgstr "Altura"
 
 #: ../gdl/gdl-dock.c:221
 msgid "Height for the dock when it's of floating type"
-msgstr "Altura del empotrable cuando es del tipo flotante"
+msgstr "Altura del acoplable cuando es del tipo flotante"
 
 #: ../gdl/gdl-dock.c:228
 msgid "Float X"
@@ -89,7 +88,7 @@ msgstr "X Flotante"
 
 #: ../gdl/gdl-dock.c:229
 msgid "X coordinate for a floating dock"
-msgstr "Coordenada X para un empotrable flotante"
+msgstr "Coordenada X para un acoplable flotante"
 
 #: ../gdl/gdl-dock.c:236
 msgid "Float Y"
@@ -97,7 +96,7 @@ msgstr "Y Flotante"
 
 #: ../gdl/gdl-dock.c:237
 msgid "Y coordinate for a floating dock"
-msgstr "Coordenada Y para un empotrable flotante"
+msgstr "Coordenada Y para un acoplable flotante"
 
 #: ../gdl/gdl-dock.c:255
 msgid "Skip taskbar"
@@ -108,96 +107,96 @@ msgid ""
 "Whether or not to prevent a floating dock window from appearing in the "
 "taskbar"
 msgstr ""
-"Indica si se debe evitar que aparezca una ventana flotante empotrable en la "
+"Indica si se debe evitar que aparezca una ventana flotante acoplable en la "
 "barra de tareas"
 
-#: ../gdl/gdl-dock-item.c:385
+#: ../gdl/gdl-dock-item.c:384
 msgid "Orientation"
 msgstr "Orientación"
 
-#: ../gdl/gdl-dock-item.c:386
+#: ../gdl/gdl-dock-item.c:385
 msgid "Orientation of the docking item"
-msgstr "Orientación del elemento que se empotra"
+msgstr "Orientación del elemento que se acopla"
 
-#: ../gdl/gdl-dock-item.c:401
+#: ../gdl/gdl-dock-item.c:400
 msgid "Resizable"
 msgstr "Redimensionable"
 
-#: ../gdl/gdl-dock-item.c:402
+#: ../gdl/gdl-dock-item.c:401
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
 msgstr ""
-"Si esta activado, el elemento empotrable se puede redimensionar cuando está "
-"empotrado en un widget GtkPanel"
+"Si esta activado, el elemento acoplable se puede redimensionar cuando está "
+"acoplado en un widget GtkPanel"
 
-#: ../gdl/gdl-dock-item.c:409
+#: ../gdl/gdl-dock-item.c:408
 msgid "Item behavior"
 msgstr "Comportamiento del elemento"
 
-#: ../gdl/gdl-dock-item.c:410
+#: ../gdl/gdl-dock-item.c:409
 msgid ""
 "General behavior for the dock item (i.e. whether it can float, if it's "
 "locked, etc.)"
 msgstr ""
-"Comportamiento general del elemento empotrable (p.e. si éste puede ser "
+"Comportamiento general del elemento acoplable (p.e. si éste puede ser "
 "flotante, bloqueado, etc.)"
 
-#: ../gdl/gdl-dock-item.c:418 ../gdl/gdl-dock-master.c:205
+#: ../gdl/gdl-dock-item.c:417 ../gdl/gdl-dock-master.c:205
 msgid "Locked"
 msgstr "Bloqueado"
 
-#: ../gdl/gdl-dock-item.c:419
+#: ../gdl/gdl-dock-item.c:418
 msgid ""
 "If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
-"Si esta activado el elemento empotrable no puede ser arrastrado fuera y no "
+"Si esta activado el elemento acoplable no puede ser arrastrado fuera y no "
 "muestra un tirador"
 
-#: ../gdl/gdl-dock-item.c:427
+#: ../gdl/gdl-dock-item.c:426
 msgid "Preferred width"
 msgstr "Anchura preferida"
 
-#: ../gdl/gdl-dock-item.c:428
+#: ../gdl/gdl-dock-item.c:427
 msgid "Preferred width for the dock item"
-msgstr "Anchura preferida para el elemento empotrado"
+msgstr "Anchura preferida para el elemento acoplado"
 
-#: ../gdl/gdl-dock-item.c:434
+#: ../gdl/gdl-dock-item.c:433
 msgid "Preferred height"
 msgstr "Altura preferida"
 
-#: ../gdl/gdl-dock-item.c:435
+#: ../gdl/gdl-dock-item.c:434
 msgid "Preferred height for the dock item"
-msgstr "Altura preferida para el elemento empotrado"
+msgstr "Altura preferida para el elemento acoplado"
 
-#: ../gdl/gdl-dock-item.c:449
+#: ../gdl/gdl-dock-item.c:448
 msgid "Iconified"
 msgstr "Iconizado"
 
-#: ../gdl/gdl-dock-item.c:450
+#: ../gdl/gdl-dock-item.c:449
 msgid ""
 "If set, the dock item is hidden but it has a corresponding icon in the dock "
 "bar allowing to show it again."
 msgstr ""
-"Si está establecido, el elemento empotrable está oculto pero tiene tiene su "
-"icono correspondiente en la barra empotrable para mostrarlo de nuevo."
+"Si está establecido, el elemento acoplable está oculto pero tiene tiene su "
+"icono correspondiente en la barra acoplable para mostrarlo de nuevo."
 
-#: ../gdl/gdl-dock-item.c:466
+#: ../gdl/gdl-dock-item.c:465
 msgid "Closed"
 msgstr "Cerrado"
 
-#: ../gdl/gdl-dock-item.c:467
+#: ../gdl/gdl-dock-item.c:466
 msgid "Whether the widget is closed."
 msgstr "Indica si el widget está cerrado."
 
-#: ../gdl/gdl-dock-item.c:872
+#: ../gdl/gdl-dock-item.c:888
 #, c-format
 msgid ""
 "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
 "some other compound dock object."
 msgstr ""
-"No se puede añadir un objeto empotrado (%p del tipo %s) dentro de %s. "
-"Utilice GdlDock o algún otro objeto combinado empotrado fijo."
+"No se puede añadir un objeto acoplado (%p del tipo %s) dentro de %s. "
+"Utilice GdlDock o algún otro objeto combinado acoplado fijo."
 
-#: ../gdl/gdl-dock-item.c:879
+#: ../gdl/gdl-dock-item.c:895
 #, c-format
 msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
@@ -206,44 +205,44 @@ msgstr ""
 "Se intentó añadir un widget con tipo %s a un %s, pero éste sólo puede "
 "contener un widget a la vez, ya contiene un widget de tipo %s"
 
-#: ../gdl/gdl-dock-item.c:1567 ../gdl/gdl-dock-item.c:1617
+#: ../gdl/gdl-dock-item.c:1583 ../gdl/gdl-dock-item.c:1633
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr ""
-"Estrategia de empotramiento no soportada %s en el objeto empotrable del tipo "
+"Estrategia de acoplamiento no soportada %s en el objeto acoplable del tipo "
 "%s"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1730
+#: ../gdl/gdl-dock-item.c:1746
 msgid "UnLock"
 msgstr "Desbloquear"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1737
+#: ../gdl/gdl-dock-item.c:1753
 msgid "Hide"
 msgstr "Ocultar"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1742
+#: ../gdl/gdl-dock-item.c:1759
 msgid "Lock"
 msgstr "Bloquear"
 
-#: ../gdl/gdl-dock-item.c:2014
+#: ../gdl/gdl-dock-item.c:2033
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr "Se intentó vincular un elemento no vinculable %p"
 
-#: ../gdl/gdl-dock-item-grip.c:387
+#: ../gdl/gdl-dock-item-grip.c:385
 msgid "Iconify this dock"
-msgstr "Iconiza este empotrable"
+msgstr "Iconiza este acoplable"
 
-#: ../gdl/gdl-dock-item-grip.c:389
+#: ../gdl/gdl-dock-item-grip.c:387
 msgid "Close this dock"
-msgstr "Cierra este empotrable"
+msgstr "Cierra este acoplable"
 
-#: ../gdl/gdl-dock-item-grip.c:730
+#: ../gdl/gdl-dock-item-grip.c:728
 msgid "Dockitem which 'owns' this grip"
-msgstr "Elemento empotrable que «posee» este tirador"
+msgstr "Elemento acoplable que «posee» este tirador"
 
 #: ../gdl/gdl-dock-layout.c:129
 msgid ""
@@ -263,15 +262,15 @@ msgstr "Verdadero si el formato ha cambiado y necesita guardarse en un archivo"
 #: ../gdl/gdl-dock-layout.c:303
 #, c-format
 msgid ""
-"While loading layout: don't know how to create a dock object whose nick is '%"
-"s'"
+"While loading layout: don't know how to create a dock object whose nick is "
+"'%s'"
 msgstr ""
-"Al cargar la colocación: No se sabe como crear un objeto empotrable cuyo "
+"Al cargar la colocación: No se sabe como crear un objeto acoplable cuyo "
 "apodo sea «%s»"
 
 #: ../gdl/gdl-dock-master.c:199
 msgid "Default title for newly created floating docks"
-msgstr "Título predeterminado para los empotrables flotantes recién creados"
+msgstr "Título predeterminado para los acoplables flotantes recién creados"
 
 #: ../gdl/gdl-dock-master.c:206
 msgid ""
@@ -282,28 +281,27 @@ msgstr ""
 "principalson bloqueados; si es 0 todos son desbloqueados, -1 indica una "
 "inconsistencia entre los elementos."
 
-#: ../gdl/gdl-dock-master.c:214 ../gdl/gdl-switcher.c:895
+#: ../gdl/gdl-dock-master.c:214 ../gdl/gdl-switcher.c:892
 msgid "Switcher Style"
 msgstr "Estilo del selector"
 
-#: ../gdl/gdl-dock-master.c:215 ../gdl/gdl-switcher.c:896
+#: ../gdl/gdl-dock-master.c:215 ../gdl/gdl-switcher.c:893
 msgid "Switcher buttons style"
 msgstr "Estilo de los botones del selector"
 
-#: ../gdl/gdl-dock-master.c:222 ../gdl/gdl-switcher.c:903
-#| msgid "Position"
+#: ../gdl/gdl-dock-master.c:222 ../gdl/gdl-switcher.c:900
 msgid "Tab Position"
 msgstr "Posición de la pestaña"
 
-#: ../gdl/gdl-dock-master.c:223 ../gdl/gdl-switcher.c:904
+#: ../gdl/gdl-dock-master.c:223 ../gdl/gdl-switcher.c:901
 msgid "Which side of the notebook holds the tabs"
 msgstr "Indica qué lado del cuaderno contiene las pestañas"
 
-#: ../gdl/gdl-dock-master.c:230 ../gdl/gdl-switcher.c:911
+#: ../gdl/gdl-dock-master.c:230 ../gdl/gdl-switcher.c:908
 msgid "Tab reorderable"
 msgstr "Pestaña reordenable"
 
-#: ../gdl/gdl-dock-master.c:231 ../gdl/gdl-switcher.c:912
+#: ../gdl/gdl-dock-master.c:231 ../gdl/gdl-switcher.c:909
 msgid "Whether the tab is reorderable by user action"
 msgstr "Indica si la pestaña se puede reordenar por una acción del usuario"
 
@@ -322,13 +320,13 @@ msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
 msgstr ""
-"El nuevo controlador de empotrables %p es automático.  Sólo los objetos "
-"empotrados manuales deberían ser llamados controlador."
+"El nuevo controlador de acoplables %p es automático.  Sólo los objetos "
+"acoplados manuales deberían ser llamados controlador."
 
 #: ../gdl/gdl-dock-master.c:1132
 #, c-format
 msgid "Dock #%d"
-msgstr "Empotrable #%d"
+msgstr "Acoplable #%d"
 
 #: ../gdl/gdl-dock-notebook.c:156
 msgid "Page"
@@ -344,7 +342,7 @@ msgstr "Nombre"
 
 #: ../gdl/gdl-dock-object.c:206
 msgid "Unique name for identifying the dock object"
-msgstr "Nombre único para identificar al objeto empotrable"
+msgstr "Nombre único para identificar al objeto acoplable"
 
 #: ../gdl/gdl-dock-object.c:220
 msgid "Long name"
@@ -352,7 +350,7 @@ msgstr "Nombre largo"
 
 #: ../gdl/gdl-dock-object.c:221
 msgid "Human readable name for the dock object"
-msgstr "Nombre legible por el humano para el objeto empotrable"
+msgstr "Nombre legible por el humano para el objeto acoplable"
 
 #: ../gdl/gdl-dock-object.c:234
 msgid "Stock Icon"
@@ -360,7 +358,7 @@ msgstr "Icono de fábrica"
 
 #: ../gdl/gdl-dock-object.c:235
 msgid "Stock icon for the dock object"
-msgstr "Icono de fábrica para el objeto empotrable"
+msgstr "Icono de fábrica para el objeto acoplable"
 
 #: ../gdl/gdl-dock-object.c:250
 msgid "Pixbuf Icon"
@@ -368,46 +366,46 @@ msgstr "Icono Pixbuf"
 
 #: ../gdl/gdl-dock-object.c:251
 msgid "Pixbuf icon for the dock object"
-msgstr "Icono Pixbuf para el objeto empotrable"
+msgstr "Icono Pixbuf para el objeto acoplable"
 
 #: ../gdl/gdl-dock-object.c:263
 msgid "Dock master"
-msgstr "Empotrable principal"
+msgstr "Acoplable principal"
 
 #: ../gdl/gdl-dock-object.c:264
 msgid "Dock master this dock object is bound to"
-msgstr "El empotrable principal al que este objeto empotrable está vinculado"
+msgstr "El acoplable principal al que este objeto acoplable está vinculado"
 
-#: ../gdl/gdl-dock-object.c:630
+#: ../gdl/gdl-dock-object.c:640
 #, c-format
 msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
-"Llamada a gdl_dock_object_dock en el objeto empotrable %p (el objeto es del "
+"Llamada a gdl_dock_object_dock en el objeto acoplable %p (el objeto es del "
 "tipo %s), el cual no tiene implementado este método"
 
-#: ../gdl/gdl-dock-object.c:843
+#: ../gdl/gdl-dock-object.c:853
 #, c-format
 msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
-"Se solicitó una operación de empotrado en un objeto no vinculable %p. La "
+"Se solicitó una operación de acoplado en un objeto no vinculable %p. La "
 "aplicación podría fallar"
 
-#: ../gdl/gdl-dock-object.c:850
+#: ../gdl/gdl-dock-object.c:860
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
 msgstr ""
-"No se puede empotrar %p en %p porque pertenecen a diferentes principales"
+"No se puede acoplar %p en %p porque pertenecen a diferentes principales"
 
-#: ../gdl/gdl-dock-object.c:908
+#: ../gdl/gdl-dock-object.c:925
 #, c-format
 msgid ""
 "Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
-"Se intentó vincular con %p un objeto %p que ya está vinculado y empotrado "
+"Se intentó vincular con %p un objeto %p que ya está vinculado y acoplado "
 "(principalactual: %p)"
 
 #: ../gdl/gdl-dock-paned.c:145
@@ -428,7 +426,7 @@ msgid ""
 "the host is redocked"
 msgstr ""
 "Define si el contenedor se pegará a su anfitrión o subirá por la jerarquía "
-"cuando el anfitrión sea re-empotrado"
+"cuando el anfitrión sea re-acoplado"
 
 #: ../gdl/gdl-dock-placeholder.c:174
 msgid "Host"
@@ -436,7 +434,7 @@ msgstr "Anfitrión"
 
 #: ../gdl/gdl-dock-placeholder.c:175
 msgid "The dock object this placeholder is attached to"
-msgstr "El objeto empotrable al que este contenedor se encuentra adjunto"
+msgstr "El objeto acoplable al que este contenedor se encuentra adjunto"
 
 #: ../gdl/gdl-dock-placeholder.c:182
 msgid "Next placement"
@@ -447,8 +445,8 @@ msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
-"La posición en la cual un elemento será empotrado a nuestro anfitrión si se "
-"hace una petición para empotrar"
+"La posición en la cual un elemento será acoplado a nuestro anfitrión si se "
+"hace una petición para acoplar"
 
 #: ../gdl/gdl-dock-placeholder.c:193
 msgid "Width for the widget when it's attached to the placeholder"
@@ -465,7 +463,7 @@ msgstr "Nivel superior flotante"
 #: ../gdl/gdl-dock-placeholder.c:208
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
 msgstr ""
-"Indica si el lugar reservado está esperando para un empotrable flotante de "
+"Indica si el lugar reservado está esperando para un acoplable flotante de "
 "nivel superior"
 
 #: ../gdl/gdl-dock-placeholder.c:214
@@ -474,7 +472,7 @@ msgstr "Coordenada X"
 
 #: ../gdl/gdl-dock-placeholder.c:215
 msgid "X coordinate for dock when floating"
-msgstr "Coordenada X para el empotrable flotante"
+msgstr "Coordenada X para el acoplable flotante"
 
 #: ../gdl/gdl-dock-placeholder.c:221
 msgid "Y Coordinate"
@@ -482,11 +480,11 @@ msgstr "Coordenada Y"
 
 #: ../gdl/gdl-dock-placeholder.c:222
 msgid "Y coordinate for dock when floating"
-msgstr "Coordenada Y para el empotrable flotante"
+msgstr "Coordenada Y para el acoplable flotante"
 
 #: ../gdl/gdl-dock-placeholder.c:514
 msgid "Attempt to dock a dock object to an unbound placeholder"
-msgstr "Intenta empotrar un objeto empotrable a un contenedor suelto"
+msgstr "Intenta acoplar un objeto acoplable a un contenedor suelto"
 
 #: ../gdl/gdl-dock-placeholder.c:641
 #, c-format
@@ -514,7 +512,7 @@ msgstr ""
 #~ msgstr "Ítem"
 
 #~ msgid "Dock items"
-#~ msgstr "Elementos empotrados"
+#~ msgstr "Elementos acoplados"
 
 #~ msgid "Layout Managment"
 #~ msgstr "Administración de formato"
